@@ -1,5 +1,5 @@
 
-More information about Castle.InversionOfControl 
-can be found at http://www.castleproject.org/container/
+More information about Castle.Windsor 
+can be found at http://stw.castleproject.org/Windsor.MainPage.ashx
 
 This git repository uses the autocrlf = false convention.
